Worked on postjob page.

--- a/TODO.txt
+++ b/TODO.txt
@@ -36,3 +36,9 @@ Build account area.
 Add some content to home page.
 
 Create real content in footer.
+
+Ad strategy.
+
+Marketing strategy.
+
+Payment strategy.
