--- a/TODO.txt
+++ b/TODO.txt
@@ -31,7 +31,7 @@ Add "sign-up" to "employers" section on main page.
 
 Widgetize the side bars.
 
-Build account area.
+Build account area...
 
 Add some content to home page.
 
